<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Calc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height_feet">Height (feet only)</string>
    <string name="height_inches">Height (Inches)</string>
    <string name="weight_pounds">Weight (lbs)</string>
    <string name="go_button">Go</string>

</resources>
